Upgrade to build again with more recent versions of intellij plugin gradle tool.